--- a/resume.html
+++ b/resume.html
@@ -54,14 +54,15 @@
                 <div class="col-lg-11 col-xl-9 col-xxl-8">
                     <!-- Experience Section-->
                     <section>
+                        <!-- Download resume button-->
+                        <!-- Note: Set the link href target to a PDF file within your project-->
+                        <div class="text-center mb-5">
+                            <a class="btn btn-primary px-4 py-3" href="#!">
+                                <div class="d-inline-block bi bi-download me-2"> Download Resume</div>
+                            </a>
+                        </div>
                         <div class="d-flex align-items-center justify-content-between mb-4">
                             <h2 class="text-primary fw-bolder mb-0 hover-underline hover-underline-blue">Experience</h2>
-                            <!-- Download resume button-->
-                            <!-- Note: Set the link href target to a PDF file within your project-->
-                            <a class="btn btn-primary px-4 py-3" href="#!">
-                                <div class="d-inline-block bi bi-download me-2"></div>
-                                Download Resume
-                            </a>
                         </div>
                         <!-- Experience Card 1-->
                         <div class="card shadow border-0 rounded-4 mb-5" data-aos="fade-up">
